feat: 공통 유틸 함수 추가(문자열 검사)

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Path mapping */
+    "paths": {
+      "@shared/*": ["./src/shared/*"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
