--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "es-hangul": "^2.3.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.0.0"
   },
   "devDependencies": {
